--- a/OverPutty/OverPutty.csproj
+++ b/OverPutty/OverPutty.csproj
@@ -65,7 +65,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Class1.cs" />
     <Compile Include="DB.cs" />
+    <Compile Include="FormInputDialogBox.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormInputDialogBox.Designer.cs">
+      <DependentUpon>FormInputDialogBox.cs</DependentUpon>
+    </Compile>
     <Compile Include="Log.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -86,6 +93,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form2.resx">
       <DependentUpon>Form2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormInputDialogBox.resx">
+      <DependentUpon>FormInputDialogBox.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
