--- a/OverPutty/OverPutty.csproj
+++ b/OverPutty/OverPutty.csproj
@@ -66,6 +66,20 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DB.cs" />
+    <Compile Include="DBHelpers\DBTableCecha.cs" />
+    <Compile Include="DBHelpers\DBTableMain.cs" />
+    <Compile Include="DBHelpers\DBTableNazwaUslugi.cs" />
+    <Compile Include="DBHelpers\DBTableParametr.cs" />
+    <Compile Include="DBHelpers\DBTableSlownik.cs" />
+    <Compile Include="DBHelpers\DBTableWartoscslownik.cs" />
+    <Compile Include="DBHelpers\DBTableWsytparametr.cs" />
+    <Compile Include="DBHelpers\IDBTable.cs" />
+    <Compile Include="DoubleEditForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DoubleEditForm.Designer.cs">
+      <DependentUpon>DoubleEditForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormConfig.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -94,6 +108,9 @@
     <Compile Include="Log.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="DoubleEditForm.resx">
+      <DependentUpon>DoubleEditForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormConfig.resx">
       <DependentUpon>FormConfig.cs</DependentUpon>
     </EmbeddedResource>
